==> belalsabha/Master_Embedded_Systems/MCU Essential Peripherals/Assignment 4/Drivers_Atmega32/Drivers/Drivers/HAL/LCD_DRIVER/Lcd.c <==
/*
 *  Lcd.c
 *
 * Created: 14 / 12 /2025
 * Author : Belal Hani Sabha
 */ 

#include "LCD.h"
#include <stdio.h>

void LCD_Init(void){
	_delay_ms(20);
	Clear_LCD_Screen();
	Write_Command_onLCD(0x02);
	Write_Command_onLCD(LCD_FUNCTION_4BIT_2LINES);
	Write_Command_onLCD(LCD_ENTRY_MODE);
	Write_Command_onLCD(LCD_BEGIN_AT_FIRST_ROW);
	Write_Command_onLCD(LCD_DISP_ON_CURSOR_BLINK);
}

void Send_Pulse_toLCD(void){
	MCAL_GPIO_WritePin(&LCD_CONTROL_PORTS, Enable, RESET_PIN);
	_delay_ms(2);
	MCAL_GPIO_WritePin(&LCD_CONTROL_PORTS, Enable, SET_PIN);
	_delay_ms(2);
}

void Clear_LCD_Screen(void){
	Write_Command_onLCD(LCD_CLEAR_SCREEN);
}

void Write_Command_onLCD(uint8_t Command){
	LCD_DATA_PORTS.PORT = (LCD_DATA_PORTS.PORT & 0x0F) | (Command & 0xF0);
	MCAL_GPIO_WritePin(&LCD_CONTROL_PORTS, Register_Select, RESET_PIN);
	MCAL_GPIO_WritePin(&LCD_CONTROL_PORTS, Read_Write, RESET_PIN);
	Send_Pulse_toLCD();

	LCD_DATA_PORTS.PORT = (LCD_DATA_PORTS.PORT & 0x0F) | ((Command << 4) & 0xF0);
	MCAL_GPIO_WritePin(&LCD_CONTROL_PORTS, Register_Select, RESET_PIN);
	MCAL_GPIO_WritePin(&LCD_CONTROL_PORTS, Read_Write, RESET_PIN);
	Send_Pulse_toLCD();
}

void Write_Character_onLCD(uint8_t Character){
	LCD_DATA_PORTS.PORT = (LCD_DATA_PORTS.PORT & 0x0F) | (Character & 0xF0);
	MCAL_GPIO_WritePin(&LCD_CONTROL_PORTS, Register_Select, SET_PIN);
	MCAL_GPIO_WritePin(&LCD_CONTROL_PORTS, Read_Write, RESET_PIN);
	Send_Pulse_toLCD();

	LCD_DATA_PORTS.PORT = (LCD_DATA_PORTS.PORT & 0x0F) | ((Character << 4) & 0xF0);
	MCAL_GPIO_WritePin(&LCD_CONTROL_PORTS, Register_Select, SET_PIN);
	MCAL_GPIO_WritePin(&LCD_CONTROL_PORTS, Read_Write, RESET_PIN);
	Send_Pulse_toLCD();
}

void Write_String_onLCD(uint8_t *String){
	uint32_t counter = 0;
	while(*String > 0){
		counter++;
		Write_Character_onLCD(*String++);
		if(counter == 16) Control_LCD_Lines_And_Cursor(2,0);
		if(counter == 32){
			Clear_LCD_Screen();
			Control_LCD_Lines_And_Cursor(1,0);
			counter = 0;
		}
	}
}

void Control_LCD_Lines_And_Cursor(uint8_t LINE, uint8_t CURSOR){
	if(LINE == 1 && CURSOR < 16)
	Write_Command_onLCD(LCD_BEGIN_AT_FIRST_ROW + CURSOR);
	if(LINE == 2 && CURSOR < 16)
	Write_Command_onLCD(LCD_BEGIN_AT_SECOND_ROW + CURSOR);
}
